# beheeromgeving-catalogus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yaml
bruno/: bruno.json  collection.bru  example.js  get-token.js  package-lock.json
bruno/Me/: Me paginate.bru  Me.bru
bruno/Products/: create product.bru  delete product.bru  filter products on confidentiality.bru  filter products on geo.bru  filter products on schema url.bru  filter products on team.bru  filter products on type.bru  filter products pn theme.bru  get product.bru  list products paginate.bru  list products.bru  query products by name.bru  query products.bru  set state product.bru  update product.bru
bruno/Products/Contracts/: create contract.bru  delete contract.bru  folder.bru  get contract.bru  list contracts.bru  set state contract.bru  update contract.bru
bruno/Products/Contracts/Distributions/: create distribution.bru  delete distribution.bru  folder.bru  get distribution.bru  list distributions.bru  update distribution.bru
bruno/Products/Services/: create service.bru  delete service.bru  get service.bru  list services.bru  update service.bru
bruno/Teams/: create team.bru  delete team.bru  folder.bru  get team.bru  list teams.bru  update team by admin.bru  update team by team member.bru
src/: .coveragerc  Dockerfile  Makefile  initialize_db.sh  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/api/: datatransferobjects.py  dtos.py  pagination.py  views.py
src/api/openapi/: preprocessors.py
src/beheeromgeving/: migration_utils.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
src/beheeromgeving/management/commands/: import_products.py  import_teams.py  refresh_periods.py  teammap.json
src/beheeromgeving/migrations/: 0001_initial.py  0002_datacontract_id_alter_datacontract_name.py  0003_dataservice_team_remove_datacontract_datateam_and_more.py  0004_remove_datacontract_conditions_and_more.py  0005_remove_datacontract_data_steward_and_more.py  0006_alter_dataservice_type_alter_team_description_and_more.py  0007_remove_datacontract_has_personal_data_and_more.py  0008_alter_dataservice_endpoint_url_and_more.py  0009_distribution_filename.py  0010_datacontract_created_at_product_created_at.py  0010_fix_distribution_format.py  0011_datacontract_created_at_product_created_at.py  0012_update_team_scopes.py  0013_remove_product_privacy_level.py  0014_datacontract_tables.py  0015_alter_product__contact_email_and_more.py  0016_contract_allows_multiple_scopes.py  0017_alter_dataservice_type.py  0018_anonymize_po_name.py  0019_distribution_crs.py  0020_datacontract_publication_date_and_more.py  0020_productpublishedsnapshot.py  0021_backfill_productpublishedsnapshot.py  0021_datacontract_last_editor_product_last_editor.py  0022_remove_datacontract_description_remove_product_crs.py  0023_alter_datacontract_publication_status_and_more.py  0024_product_endorsement_product_other_identifier.py  0025_alter_distribution_type.py  0026_productrevision.py  0026_productworkingcopy.py  0027_datacontractrevision.py  0027_datacontractworkingcopy.py  0028_datacontractrevisiondistribution.py  0028_datacontractworkingcopydistribution.py  0029_alter_live_last_updated_defaults.py
src/docs/: DCAT.md  datamodel.dbml  design-decisions.md  frontend-contract-revision-workflow.md  frontend-product-revision-workflow.md
src/domain/: base.py  enums.py  exceptions.py  objects.py  repositories.py  services.py
src/domain/auth/: __init__.py  objects.py  repositories.py  services.py
src/domain/product/: __init__.py  enums.py  objects.py  policies.py  queries.py  repositories.py  services.py  snapshot.py
src/domain/team/: __init__.py  objects.py  repositories.py  services.py
src/tests/: conftest.py  settings.py  test_dtos.py  test_index.py  test_migration_utils.py  test_views.py  utils.py
src/tests/domain/: conftest.py  test_permissions.py  test_repositories.py  test_services.py  utils.py
tests/: conftest.py  settings.py  test_auth_scopes.py  test_dtos.py  test_import_products.py  test_migration_utils.py  test_views.py  utils.py
tests/domain/: conftest.py  test_base_object.py  test_objects.py  test_permissions.py  test_policies.py  test_repositories.py  test_services.py  test_snapshot.py  utils.py
tests/files/: marketplace.json  marketplace_detail.json  product.json  schema_api.json
